[package]
name = "lox"
version = "0.2.0"
authors = ["Jonathan Tran <jonnytran@gmail.com>"]
edition = "2018"
resolver = "2"

[features]
debug-print-code = []
debug-trace-execution = []

[dependencies]
argparse = "0.2.2"
fnv = "1.0.6"
lazy_static = "1.4.0"
num-derive = "0.3"
num-traits = "0.2"
unicode-segmentation = "1.3.0"

[profile.dev]
split-debuginfo = "unpacked"
